syntax = "proto3";

package helloworld.v1;

option go_package = "mall-shop-be/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "helloworld.v1";
option objc_class_prefix = "APIHelloworldV1";

enum ErrorReason {
  USER_NOT_FOUND = 0;
  USER_EXISTED=1;
  UNKNOWN_ERROR=2;
  PASSWD_NOT_VALID=3;
  PASSWD_ERROR=4;
  USERNAME_NOT_VALID=5;
  GOODS_EXISTED=6;
}
